# swda-etf-crash-alert

./: .flake8  .gitignore  README.md  handler.py  nb.ipynb  package-lock.json  package.json  pyproject.toml  serverless.yml  tsconfig.json
src/: handler.ts
