[tool.poetry]
authors = []
description = ""
name = "swda-etf-crash-alert"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
bokeh = "^3.6.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
